fix layout issues in Contact section + other css improvements

--- a/src/components/Cards/Cards.css
+++ b/src/components/Cards/Cards.css
@@ -34,7 +34,7 @@
 
 .card-img-top {
   border-radius: 14px 14px 0 0;
-  height: 13rem;
+  min-height: 13rem;
   filter: blur(2px);
   transition: all 0.5s ease;
 }
