--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -4,7 +4,7 @@ form {
     var(--color-primary) 0%,
     var(--color-primary-light) 100%
   );
-  padding: 3.5rem 2rem 2rem;
+  padding: 3.5rem 2rem;
   margin-bottom: 3rem;
   border-radius: 40px;
   display: flex;
@@ -39,36 +39,39 @@ textarea.form-control {
   padding: 1rem;
   background-color: rgba(255, 255, 255, 0.4);
   color: white;
-  font-weight: 600;
+  font-weight: 500;
   font-size: 0.9rem;
   border-radius: 16px;
   border: none;
-  box-shadow: rgb(38, 57, 77) 0px 18px 12px -10px;
+  box-shadow: rgb(38, 57, 77) 0px 14px 12px -10px;
   transition: all 0.2s ease-in-out;
   resize: none;
 }
 
 input:hover,
-textarea:hover {
-  transform: scale(0.95);
+textarea:hover,
+input:focus,
+textarea:focus {
+  transform: scale(0.98);
   box-shadow: 0 0 0 0;
-  background-color: rgba(100, 100, 100, 0.4);
+  background-color: rgba(100, 100, 100, 0.4) !important;
 }
 
 input:focus,
 textarea:focus {
-  background-color: rgba(100, 100, 100, 0.4);
-  transform: scale(0.95);
+  color: white !important;
 }
 
 input.form-control::placeholder,
 textarea.form-control::placeholder {
   color: white;
-  font-weight: 600;
+  font-weight: 500;
 }
 
 .invalid-feedback {
-  font-size: 11px;
+  position: absolute;
+  bottom: -22px;
+  font-size: 12px;
   margin: 0.5rem 0 0 1rem;
   font-weight: 600;
 }
@@ -116,17 +119,26 @@ textarea.form-control::placeholder {
   padding: 0.5rem 2.5rem;
 }
 
-.messageSent,
-.error {
-  text-align: center;
+.bottomContainer {
+  position: relative;
+  width: max-content;
+  display: flex;
+  justify-content: center;
+}
+
+.bottomMessage {
+  position: absolute;
+  width: max-content !important;
+  display: inline;
+  bottom: -3.5rem;
   text-transform: capitalize;
-  background-color: var(--color-offWhite);
+  background-color: rgba(230, 230, 230, 0.8);
   color: var(--color-primary);
-  font-size: 16px;
-  font-weight: 700;
+  font-size: 14px;
+  font-weight: 600;
+  letter-spacing: unset;
   padding: 10px;
   border-radius: 10px;
-  margin: 1rem 0 0;
 }
 
 @media screen and (max-width: 767px) {
@@ -165,10 +177,21 @@ textarea.form-control::placeholder {
     margin-top: 0.5rem;
     padding: 0.5rem 2rem;
   }
+
+  .bottomMessage {
+    font-size: 12px;
+    bottom: -3.3rem;
+  }
 }
 
 @media screen and (min-width: 768px) and (max-width: 940px) {
   #Contact h1 {
     width: 40%;
+  }
+}
+
+@media screen and (min-width: 941px) and (max-width: 1200px) {
+  .formContainer {
+    max-width: 90%;
   }
 }
